Drawer: fix flickering on touch release

Change-Id: I9a8b46fd796652822760f70d0c59db54214337b1
Task-number: QTBUG-55995
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>